--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-permissions": "^3.6.1",
-    "react-native-web": "~0.18.9"
+    "react-native-web": "~0.18.9",
+    "expo-device": "~5.0.0",
+    "expo-location": "~15.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
