--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "@react-navigation/native-stack": "^6.9.2",
     "@react-navigation/stack": "^6.3.5",
     "expo": "~47.0.8",
+    "expo-device": "~5.0.0",
+    "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
     "parse": "^3.5.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-permissions": "^3.6.1",
-    "react-native-web": "~0.18.9",
-    "expo-device": "~5.0.0",
-    "expo-location": "~15.0.1"
+    "react-native-web": "~0.18.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
