--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/native-stack": "^6.9.2",
@@ -21,6 +24,7 @@
     "parse": "^3.5.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-hook-form": "^7.40.0",
     "react-native": "0.70.5",
     "react-native-permissions": "^3.6.1",
     "react-native-web": "~0.18.9"
