--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-google-maps/api": "^2.17.0",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/native-stack": "^6.9.2",
@@ -21,6 +22,7 @@
     "expo-device": "~5.0.0",
     "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
+    "google-map-react": "^2.2.0",
     "parse": "^3.5.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
