--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-device": "~5.0.0",
     "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.14.0",
     "parse": "^3.5.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
